// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar test NavBar snapshot with user with avatar 1`] = `
<AppBar
  className="appbar"
  data-testid="navbar"
  position="static"
>
  <Toolbar>
    <Link
      className="link flex1"
      data-testid="titleLink"
      to="/"
    >
      <Typography
        color="inherit"
        variant="h6"
      >
        Name of the project
      </Typography>
    </Link>
    <Hidden
      only="xs"
    >
      <Link
        className="link"
        to=""
      >
        <Button
          color="inherit"
          data-testid="buttonA"
        >
          ButtonA
        </Button>
      </Link>
      <Button
        color="inherit"
        data-testid="buttonB"
      >
        ButtonB
      </Button>
      <Button
        color="inherit"
        data-testid="loginButton"
        onClick={[Function]}
      >
        <Avatar
          alt="avatar"
          className="avatar"
          src="avatar"
        />
        <Typography
          color="inherit"
        >
          Logout
        </Typography>
      </Button>
    </Hidden>
    <Hidden
      only={
        Array [
          "xl",
          "lg",
          "md",
          "sm",
        ]
      }
    >
      <IconButton
        aria-haspopup="true"
        aria-label="Menu"
        aria-owns={null}
        color="inherit"
        data-testid="navbarDropMenuButton"
        onClick={[Function]}
      >
        <MenuIcon />
      </IconButton>
      <Menu
        anchorEl={null}
        data-testid="dropDownMenu"
        id="simple-menu"
        onClose={[Function]}
        open={false}
      >
        <MenuItem>
          <Link
            className="menuLink"
            data-testid="linkA"
            to=""
          >
            <Typography
              color="textPrimary"
            >
              LinkA
            </Typography>
          </Link>
        </MenuItem>
        <MenuItem
          data-testid="loginMenu"
          onClick={[Function]}
        >
          <Avatar
            alt="avatar"
            className="avatar"
            src="avatar"
          />
          <Typography
            color="textPrimary"
          >
            Logout
          </Typography>
        </MenuItem>
      </Menu>
    </Hidden>
  </Toolbar>
</AppBar>
`;

exports[`Navbar test NavBar snapshot with user with avatar with role 2 1`] = `
<AppBar
  className="appbar"
  data-testid="navbar"
  position="static"
>
  <Toolbar>
    <Link
      className="link flex1"
      data-testid="titleLink"
      to="/"
    >
      <Typography
        color="inherit"
        variant="h6"
      >
        Name of the project
      </Typography>
    </Link>
    <Hidden
      only="xs"
    >
      <Link
        className="link"
        to=""
      >
        <Button
          color="inherit"
          data-testid="buttonA"
        >
          ButtonA
        </Button>
      </Link>
      <Button
        color="inherit"
        data-testid="buttonB"
      >
        ButtonB
      </Button>
      <Button
        color="inherit"
        data-testid="loginButton"
        onClick={[Function]}
      >
        <Avatar
          alt="avatar"
          className="avatar"
          src="avatar"
        />
        <Typography
          color="inherit"
        >
          Logout
        </Typography>
      </Button>
    </Hidden>
    <Hidden
      only={
        Array [
          "xl",
          "lg",
          "md",
          "sm",
        ]
      }
    >
      <IconButton
        aria-haspopup="true"
        aria-label="Menu"
        aria-owns={null}
        color="inherit"
        data-testid="navbarDropMenuButton"
        onClick={[Function]}
      >
        <MenuIcon />
      </IconButton>
      <Menu
        anchorEl={null}
        data-testid="dropDownMenu"
        id="simple-menu"
        onClose={[Function]}
        open={false}
      >
        <MenuItem>
          <Link
            className="menuLink"
            data-testid="linkA"
            to=""
          >
            <Typography
              color="textPrimary"
            >
              LinkA
            </Typography>
          </Link>
        </MenuItem>
        <MenuItem
          data-testid="loginMenu"
          onClick={[Function]}
        >
          <Avatar
            alt="avatar"
            className="avatar"
            src="avatar"
          />
          <Typography
            color="textPrimary"
          >
            Logout
          </Typography>
        </MenuItem>
      </Menu>
    </Hidden>
  </Toolbar>
</AppBar>
`;

exports[`Navbar test NavBar snapshot with user without avatar 1`] = `
<AppBar
  className="appbar"
  data-testid="navbar"
  position="static"
>
  <Toolbar>
    <Link
      className="link flex1"
      data-testid="titleLink"
      to="/"
    >
      <Typography
        color="inherit"
        variant="h6"
      >
        Name of the project
      </Typography>
    </Link>
    <Hidden
      only="xs"
    >
      <Link
        className="link"
        to=""
      >
        <Button
          color="inherit"
          data-testid="buttonA"
        >
          ButtonA
        </Button>
      </Link>
      <Button
        color="inherit"
        data-testid="buttonB"
      >
        ButtonB
      </Button>
      <Button
        color="inherit"
        data-testid="loginButton"
        onClick={[Function]}
      >
        <Typography
          color="inherit"
        >
          Logout
        </Typography>
      </Button>
    </Hidden>
    <Hidden
      only={
        Array [
          "xl",
          "lg",
          "md",
          "sm",
        ]
      }
    >
      <IconButton
        aria-haspopup="true"
        aria-label="Menu"
        aria-owns={null}
        color="inherit"
        data-testid="navbarDropMenuButton"
        onClick={[Function]}
      >
        <MenuIcon />
      </IconButton>
      <Menu
        anchorEl={null}
        data-testid="dropDownMenu"
        id="simple-menu"
        onClose={[Function]}
        open={false}
      >
        <MenuItem>
          <Link
            className="menuLink"
            data-testid="linkA"
            to=""
          >
            <Typography
              color="textPrimary"
            >
              LinkA
            </Typography>
          </Link>
        </MenuItem>
        <MenuItem
          data-testid="loginMenu"
          onClick={[Function]}
        >
          <Typography
            color="textPrimary"
          >
            Logout
          </Typography>
        </MenuItem>
      </Menu>
    </Hidden>
  </Toolbar>
</AppBar>
`;

exports[`Navbar test NavBar snapshot without user 1`] = `
<AppBar
  className="appbar"
  data-testid="navbar"
  position="static"
>
  <Toolbar>
    <Link
      className="link flex1"
      data-testid="titleLink"
      to="/"
    >
      <Typography
        color="inherit"
        variant="h6"
      >
        Name of the project
      </Typography>
    </Link>
    <Hidden
      only="xs"
    >
      <Link
        className="link"
        to=""
      >
        <Button
          color="inherit"
          data-testid="buttonA"
        >
          ButtonA
        </Button>
      </Link>
      <Button
        color="inherit"
        data-testid="buttonB"
      >
        ButtonB
      </Button>
      <Button
        color="inherit"
        data-testid="loginButton"
        onClick={[Function]}
      >
        Login
      </Button>
    </Hidden>
    <Hidden
      only={
        Array [
          "xl",
          "lg",
          "md",
          "sm",
        ]
      }
    >
      <IconButton
        aria-haspopup="true"
        aria-label="Menu"
        aria-owns={null}
        color="inherit"
        data-testid="navbarDropMenuButton"
        onClick={[Function]}
      >
        <MenuIcon />
      </IconButton>
      <Menu
        anchorEl={null}
        data-testid="dropDownMenu"
        id="simple-menu"
        onClose={[Function]}
        open={false}
      >
        <MenuItem>
          <Link
            className="menuLink"
            data-testid="linkA"
            to=""
          >
            <Typography
              color="textPrimary"
            >
              LinkA
            </Typography>
          </Link>
        </MenuItem>
        <MenuItem
          data-testid="loginMenu"
          onClick={[Function]}
        >
          Login
        </MenuItem>
      </Menu>
    </Hidden>
  </Toolbar>
</AppBar>
`;
